# vocal-web

./: .env.example  .envrc.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  PLAN-fix-flight-date-url.md  README.md  THIRD_PARTY_NOTICES.md  agentverse.yaml  local-access.html  package.json  pyproject.toml  requirements.txt  tsconfig.base.json  tsconfig.extension.json  tsconfig.tests.json
.cursor/plans/: agent_element_matching_fixes_3e250626.plan.md
agents/: Dockerfile.interpreter  Dockerfile.navigator  SUMMARY.md  __init__.py  api_server.py  interpreter_agent.py  navigator_agent.py  orchestrator_agent.py  run_agents.py
agents/shared/: SUMMARY.md  __init__.py  asi_client.py  auth.py  ax_matcher.py  google_stt.py  llm_client.py  local_agents.py  (+10 more)
dev/: SUMMARY.md  combine_ax_recordings.py  eval_dommap_actions.py  evaluate_ax_dataset.py  test_element_matching.py
docs/: SUMMARY.md  ax-recording-plan.md  dommap-filtering-plan.md  security-fixes-plan.md
extension/: SUMMARY.md  background.js  content.js  content.ts  fast-commands.js  fast-commands.ts  globals.d.ts  local-access.html  local-access.js  local-access.ts  manifest.json  mic-permission.html  mic-permission.ts  popup.css  popup.html  popup.js  popup.ts  settings.html  settings.ts  sidepanel.html  sidepanel.js  sidepanel.ts  styles.css
tests/: SUMMARY.md  conftest.py  extension-full-context.spec.ts  local-interpreter-routing.test.ts  local-llm-parse.test.ts  sensitive-fields.test.ts  test_api_auth.py  test_asi_client.py  test_auth.py  test_ax_dataset.py  test_llm_client.py  url-validator.test.ts
(+64 files in other folders)
